--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "infostars/mpcmf-console",
+    "name": "mpcmf/mpcmf-console",
     "minimum-stability": "dev",
     "license": "MIT",
     "authors": [
